5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1635_2711.log
== SUBMITION (2019-04-11 10:17:44) 
-- CODE:
a = float(input())
b = int(input())
c = float(input())
d = int(input())
e = float(input())

if ((b*c)+(d*e)>a)
   print("INSUFICIENTE")
else:
	print("SUFICIENTE")
-- EXECUTION TIME:
0.19309
-- ERROR:
  File "/home/codebench/codes/1635/2711/main.py", line 7
    if ((b*c)+(d*e)>a)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:17:47) 
-- CODE:
a = float(input())
b = int(input())
c = float(input())
d = int(input())
e = float(input())

if ((b*c)+(d*e)>a)
   print("INSUFICIENTE")
else:
	print("SUFICIENTE")
-- ERROR:
File "XXXX", line 7
    if ((b*c)+(d*e)>a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:18:10) 
-- CODE:
a = float(input())
b = int(input())
c = float(input())
d = int(input())
e = float(input())

if ((b*c)+(d*e)>a):
   print("INSUFICIENTE")
else:
	print("SUFICIENTE")
-- EXECUTION TIME:
0.170893
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
